--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,13 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<powermock.version>1.4.10</powermock.version>
+        <springframework.version>5.2.5.RELEASE</springframework.version>
 		<junit-version>5.6.0</junit-version>
 		<junit-platform-runner-version>1.6.0</junit-platform-runner-version>
 		<log4j2.version>2.13.1</log4j2.version>
 		<project.version>2.1</project.version>
+        <springboot.version>2.2.5.RELEASE</springboot.version>
+        <hibernate.version>5.4.18.Final</hibernate.version>
 	</properties>
 
 	<modules>
@@ -129,7 +132,7 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
-				<version>5.4.12.Final</version>
+                <version>${hibernate.version}</version>
 				<type>jar</type>
 			</dependency>
 			<dependency>
@@ -137,46 +140,53 @@
 				<artifactId>mockito-core</artifactId>
 				<version>3.3.0</version>
 			</dependency>
+            
+            <!-- Springframework -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-beans</artifactId>
-				<version>5.2.4.RELEASE</version>
+				<version>${springframework.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-tx</artifactId>
-				<version>5.2.4.RELEASE</version>
+				<version>${springframework.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
-				<version>5.2.4.RELEASE</version>
+				<version>${springframework.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-orm</artifactId>
-				<version>5.2.4.RELEASE</version>
+				<version>${springframework.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
-				<version>5.2.4.RELEASE</version>
+				<version>${springframework.version}</version>
 			</dependency>
+            
+            <!-- Springboot -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot</artifactId>
-				<version>2.2.5.RELEASE</version>
+                <version>${springboot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-autoconfigure</artifactId>
-				<version>2.2.5.RELEASE</version>
+				<version>${springboot.version}</version>
 			</dependency>
+            
+            <!-- gson should be replaced by json-b and json-p -->
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
 				<version>2.8.6</version>
 			</dependency>
+            
 			<dependency>
 				<groupId>com.google.apis</groupId>
 				<artifactId>google-api-services-calendar</artifactId>
@@ -192,16 +202,21 @@
 				<artifactId>google-oauth-client-jetty</artifactId>
 				<version>1.23.0</version>
 			</dependency>
+            
+            <!-- This jar should be replaced by javax annotation -->
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
 				<artifactId>jsr305</artifactId>
 				<version>3.0.2</version>
 			</dependency>
+            
+            <!-- Should be replaced by json-p -->
 			<dependency>
 				<groupId>org.jsoup</groupId>
 				<artifactId>jsoup</artifactId>
 				<version>1.11.3</version>
 			</dependency>
+            
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
@@ -217,6 +232,8 @@
 				<artifactId>commons-lang3</artifactId>
 				<version>3.8.1</version>
 			</dependency>
+            
+            <!-- Should be replaced by java mail 1.6 -->
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-email</artifactId>
@@ -227,6 +244,8 @@
 				<artifactId>dom4j</artifactId>
 				<version>1.7-20060614</version>
 			</dependency>
+            
+            <!-- should be replaced by eclipe-jetty -->
 			<dependency>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty</artifactId>
@@ -243,6 +262,7 @@
 				<version>3.141.59</version>
 			</dependency>
 
+            <!-- This jar should be removed, use Saxon instead -->
 			<dependency>
 				<groupId>com.jayway.jsonpath</groupId>
 				<artifactId>json-path</artifactId>
