--- a/jason-product/pom.xml
+++ b/jason-product/pom.xml
@@ -2,8 +2,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
-	<!-- This project needs to be refactored in a micro-service structure: yeeyi, dictionary, birthday -->
+    <packaging>pom</packaging>
+    <modules>
+        <module>jason-dictionary-translation</module>
+    </modules>
+
+    <!-- This project needs to be refactored in a micro-service structure: yeeyi, dictionary, birthday -->
 
 	<parent>
 		<groupId>org.jason</groupId>
