--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
 				<artifactId>spring-boot</artifactId>
                 <version>${springboot.version}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${springboot.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-autoconfigure</artifactId>
