--- a/jason-util/pom.xml
+++ b/jason-util/pom.xml
@@ -73,6 +73,11 @@
         <dependency>
             <groupId>com.google.oauth-client</groupId>
             <artifactId>google-oauth-client-jetty</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion></exclusions>
         </dependency>
 
         <dependency>
