--- a/jason-product/jason-dictionary-pronunciation/pom.xml
+++ b/jason-product/jason-dictionary-pronunciation/pom.xml
@@ -31,6 +31,37 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jason</groupId>
+			<artifactId>jason-util</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+		<!--  <Start> Used for remote google translation -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>htmlunit-driver</artifactId>
+			<version>2.38.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>3.141.59</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.11.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<!--  <End> Used for remote google translation -->
+
 	</dependencies>
 
 	<build>
