--- a/jason-product/jason-dictionary-pronunciation/Dockerfile
+++ b/jason-product/jason-dictionary-pronunciation/Dockerfile
@@ -5,4 +5,5 @@ ARG DEPENDENCY=target/dependency
 COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY ${DEPENDENCY}/META-INF /app/META-INF
 COPY ${DEPENDENCY}/BOOT-INF/classes /app
+COPY ${DEPENDENCY}/BOOT-INF/classes/docker_bin/downloadvedio /usr/local/bin/
 ENTRYPOINT ["java","-cp","app:app/lib/*","org.jason.dictionary.PronunciationApplication"]
