--- a/jason-product/jason-dictionary-translation/docker-compose.yml
+++ b/jason-product/jason-dictionary-translation/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "4444:4444"
   chrome:
     image: selenium/node-chrome:3.141.59-bismuth
+    container_name: chrome-browser
     depends_on:
       - selenium-hub
     environment:
