--- a/jason-product/jason-dictionary-translation/pom.xml
+++ b/jason-product/jason-dictionary-translation/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
         <!--  Used for remote rest service call -->
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
