--- a/jason-parent/pom.xml
+++ b/jason-parent/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.jason</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>2.4</version>
+    <version>2.5</version>
     <packaging>pom</packaging>
 
     <description>Jason POM</description>
@@ -20,10 +20,10 @@
             <name>Jason Zhang</name>
             <email>zclok236@gmail.com</email>
             <url>http://www.jasonzhang.com.au</url>
-            <organization>techgarden</organization>
+            <organization>Techgarden</organization>
             <organizationUrl>http://www.jasonzhang.com.au</organizationUrl>
             <roles>
-                <role>Architecture</role>
+                <role>Technical Architecture</role>
             </roles>
             <timezone>-6</timezone>
         </developer>
@@ -43,6 +43,9 @@
         <project.version>2.2</project.version>
         <springboot.version>2.2.5.RELEASE</springboot.version>
         <hibernate.version>5.4.18.Final</hibernate.version>
+        <jsonb-api.version>1.1.4</jsonb-api.version>
+        <jsonb-glassfish-impl.version>1.1</jsonb-glassfish-impl.version>
+	<apache-commons-langs.version>3.12.0</apache-commons-langs.version>
     </properties>
 
     <modules>
@@ -61,11 +64,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.jason</groupId>
-                <artifactId>jason-util</artifactId>
-                <version>${project.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
@@ -117,6 +115,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
+                <scope>runtime</scope>
                 <version>8.0.19</version>
             </dependency>
             <dependency>
@@ -232,7 +231,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.8.1</version>
+		<version>${apache-commons-langs.version}</version>
             </dependency>
 
             <!-- Should be replaced by java mail 1.6 -->
