--- a/jason-product/jason-olympics/pom.xml
+++ b/jason-product/jason-olympics/pom.xml
@@ -15,9 +15,9 @@
 	<name>jason-olympics</name>
 	<description>olympic - Spider and Web</description>
 	<properties>
-		<java.version>1.8</java.version>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
+		<java.version>11</java.version>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
 	</properties>
 	<dependencies>
 
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.jason</groupId>
 			<artifactId>jason-util</artifactId>
-			<version>2.4</version>
+			<version>2.5</version>
 		</dependency>
 
 		<dependency>
@@ -46,6 +46,7 @@
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.json</artifactId>
+			<scope>runtime</scope>
 			<version>1.1</version>
 		</dependency>
 
@@ -58,6 +59,7 @@
 		<dependency>
 			<groupId>org.eclipse</groupId>
 			<artifactId>yasson</artifactId>
+			<scope>runtime</scope>
 			<version>1.0</version>
 		</dependency>
 	</dependencies>
@@ -67,6 +69,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
