--- a/jason-util/pom.xml
+++ b/jason-util/pom.xml
@@ -8,8 +8,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.jason</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>2.4</version>
+        <version>2.5</version>
     </parent>
 
     <artifactId>jason-util</artifactId>
@@ -44,6 +44,30 @@
         <dependency>
             <groupId>maven</groupId>
             <artifactId>dom4j</artifactId>
+        </dependency>
+
+        <!-- jsonb and jsonp from JavaEE -->
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <scope>runtime</scope>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.json.bind</groupId>
+            <artifactId>javax.json.bind-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <scope>runtime</scope>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
