--- a/jason-product/jason-dictionary-translation/src/main/resources/application.properties
+++ b/jason-product/jason-dictionary-translation/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=10001
 management.endpoints.web.exposure.include=*
+spring.h2.console.enabled=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.url=jdbc:mysql://localhost:3306/dictionary?useLegacyDatetimeCode=false&serverTimezone=UTC
