--- a/jason-product/jason-dictionary-translation/pom.xml
+++ b/jason-product/jason-dictionary-translation/pom.xml
@@ -7,8 +7,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.1</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.5.7</version>
+		<relativePath />
 	</parent>
 
 	<groupId>org.jason</groupId>
@@ -36,6 +36,17 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-hal-explorer</artifactId>
+		</dependency>
+		
+		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		<dependency>
+  			<groupId>io.springfox</groupId>
+  			<artifactId>springfox-boot-starter</artifactId>
+  			<version>3.0.0</version>
 		</dependency>
 
 		<dependency>
