--- a/jason-product/jason-dictionary-translation-aws/pom.xml
+++ b/jason-product/jason-dictionary-translation-aws/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>aws-java-sdk-dynamodb</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-sqs</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
