--- a/jason-product/dictionary-read-aws/pom.xml
+++ b/jason-product/dictionary-read-aws/pom.xml
@@ -2,9 +2,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jason</groupId>
-	<artifactId>dictionary-translation-aws</artifactId>
-	<version>1.0.0</version>
-	<packaging>jar</packaging>
+	<artifactId>dictionary-read-aws</artifactId>
+	<version>2.0.0</version>
 
 	<build>
 		<plugins>
